--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
     "name": "typechain",
     "version": "1.0.0",
-    "description": "Learging Typescript by making a Blockchain with it",
+    "description": "Learning Typescript by making a Blockchain with it",
     "main": "index.js",
     "repository": "https://github.com/nomadcoders/typechain",
-    "author": "Nicolas",
+    "author": "Nicolás Serrano Arévalo <itnico.las.me@gmail.com>",
     "license": "MIT",
     "scripts": {
-        "start": "tsc-watch --onSuccess \" node dise/index.js\" "
+        "start": "tsc-watch --onSuccess \" node dist/index.js\" "
     },
     "dependencies": {
+        "crypto-js": "^4.1.1",
         "tsc-watch": "^4.6.0"
+    },
+    "devDependencies": {
+        "@types/node": "^17.0.8",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.4"
     }
 }
